--- a/index.html
+++ b/index.html
@@ -1,78 +1,70 @@
 <!DOCTYPE html>
 <html lang="id">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Untuk Kamu - 05.05.2025</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Courier New', monospace;
-            background: linear-gradient(to bottom right, #ffe6f0, #cce6ff);
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            text-align: center;
-        }
-
-        h1 {
-            font-size: 3em;
-            color: #d63384;
-            margin-bottom: 20px;
-        }
-
-        .message {
-            max-width: 600px;
-            font-size: 1.2em;
-            animation: fadeIn 3s ease-in-out;
-            line-height: 1.6;
-        }
-
-        @keyframes fadeIn {
-            0% {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        footer {
-            position: absolute;
-            bottom: -170px;
-            font-size: 0.9em;
-            color: #888;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Untuk Kamu - 05.05.2025</title>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Open+Sans&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Open Sans', sans-serif;
+      background: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      text-align: center;
+      backdrop-filter: brightness(0.7);
+      padding: 20px;
+    }
+    h1 {
+      font-family: 'Pacifico', cursive;
+      font-size: 4em;
+      color: #ffd1dc;
+      margin-bottom: 20px;
+      text-shadow: 2px 2px 4px #000;
+    }
+    .message {
+      max-width: 700px;
+      background: rgba(0, 0, 0, 0.6);
+      border-radius: 15px;
+      padding: 30px;
+      font-size: 1.2em;
+      line-height: 1.8;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+      animation: fadeIn 3s ease-in-out;
+    }
+    @keyframes fadeIn {
+      0% { opacity: 0; transform: translateY(30px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+    footer {
+      margin-top: 30px;
+      font-size: 0.9em;
+      color: #ddd;
+      text-shadow: 1px 1px 2px #000;
+    }
+  </style>
 </head>
-
 <body>
-    <h1>05.05.2025</h1>
-    <div class="message">
-        <p>Sayang… hari ini tanggal 5 Mei 2025 ya…</p>
-        <p>Aku cuma pengen bilang satu hal: <strong>terima kasih</strong>.</p>
-        <p>Terima kasih udah tetap di sini, nemenin aku, walaupun kita belum bisa bareng secara terbuka, belum bisa
-            jalan bareng, dan aku juga belum bisa ngasih apa-apa yang besar buat kamu.</p>
-        <p>Tapi aku mau kamu tahu, rasa aku ke kamu itu nyata… dan aku serius ngejaga ini semua.</p>
-        <p>Kita memang lagi sama-sama berjuang, belum bisa cerita ke siapa-siapa. Tapi aku percaya, suatu hari nanti
-            kita bakal inget hari ini… dan kita bakal bilang, ‘Untung kita sabar ya waktu itu.’</p>
-        <p>Hari ini memang biasa-biasa aja… tapi kamu enggak. Kamu spesial, dan aku bersyukur banget bisa punya kamu.
-        </p>
-        <p>Jadi… selamat tanggal cantik ya. Semoga kamu selalu bahagia, dan jangan lupa, ada aku yang selalu doain
-            kamu—diam-diam, tapi setulus itu.</p>
-        <p><strong>Dari aku, yang sayang banget sama kamu.</strong></p>
-    </div>
-    <footer>
-        Dibuat dengan hati - oleh kamu yang (mungkin) pemalu tapi serius.
-    </footer>
+  <h1>05.05.2025</h1>
+  <div class="message">
+    <p>Sayang… hari ini tanggal 5 Mei 2025 ya…</p>
+    <p>Aku cuma pengen bilang satu hal: <strong>terima kasih</strong>.</p>
+    <p>Terima kasih udah tetap di sini, nemenin aku, walaupun kita belum bisa bareng secara terbuka, belum bisa jalan bareng, dan aku juga belum bisa ngasih apa-apa yang besar buat kamu.</p>
+    <p>Tapi aku mau kamu tahu, rasa aku ke kamu itu nyata… dan aku serius ngejaga ini semua.</p>
+    <p>Kita memang lagi sama-sama berjuang, belum bisa cerita ke siapa-siapa. Tapi aku percaya, suatu hari nanti kita bakal inget hari ini… dan kita bakal bilang, ‘Untung kita sabar ya waktu itu.’</p>
+    <p>Hari ini memang biasa-biasa aja… tapi kamu enggak. Kamu spesial, dan aku bersyukur banget bisa punya kamu.</p>
+    <p>Jadi… selamat tanggal cantik ya. Semoga kamu selalu bahagia, dan jangan lupa, ada aku yang selalu doain kamu—diam-diam, tapi setulus itu.</p>
+    <p><strong>Dari aku, yang sayang banget sama kamu.</strong></p>
+  </div>
+  <footer>
+    Dibuat dengan hati - oleh kamu yang (mungkin) pemalu tapi serius.
+  </footer>
 </body>
-
 </html>
